--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.61</version>
         </dependency>
 
     </dependencies>
@@ -60,11 +61,11 @@
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
-<!--                <excludes>-->
-<!--                    <exclude>**/*.properties</exclude>-->
-<!--                    <exclude>**/*.xml</exclude>-->
-<!--                    <exclude>**/*.yml</exclude>-->
-<!--                </excludes>-->
+                <!--                <excludes>-->
+                <!--                    <exclude>**/*.properties</exclude>-->
+                <!--                    <exclude>**/*.xml</exclude>-->
+                <!--                    <exclude>**/*.yml</exclude>-->
+                <!--                </excludes>-->
                 <filtering>false</filtering>
             </resource>
         </resources>
