--- a/conf/hosts.conf
+++ b/conf/hosts.conf
@@ -1,7 +1,3 @@
-#临时IP地址	临时IP地址	用户名	密码
-192.168.0.160	root	123456
-192.168.0.160	root	123456
-192.168.0.160	root	123456
-192.168.0.160	root	123456
-192.168.0.160	root	123456
+#双网卡的情况下，可以写管理地址也可以写业务地址，也可以都写，以空格或者制表符分割
+#[临时IP地址  | 临时IP地址]	用户名	密码
 192.168.0.160	root	123456
