添加机器免密登录功能，一到多，多到多免密

--- a/conf/hosts.conf
+++ b/conf/hosts.conf
@@ -1,4 +1,5 @@
 #双网卡的情况下，可以写管理地址也可以写业务地址，也可以都写，以空格或者制表符分割
 #[临时IP地址  | 临时IP地址]	用户名	密码
 192.168.0.102	root	1234
+127.0.0.1	apple	1234
 192.168.0.103	root	123456
