--- a/conf/hosts.conf
+++ b/conf/hosts.conf
@@ -1,4 +1,4 @@
-#双网卡的情况下，可以写管理地址也可以写业务地址，也可以都写，以空格或者制表符分割
+#双网卡的情况下，可以写管理地址也可以写业务地址，也可以都写，以空格或者制表符分割 ,注解符号#或者//
 #[临时IP地址  | 临时IP地址]	用户名	密码
 192.168.0.102	root	1234
 127.0.0.1	apple	1234
